email reset done

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
 
   <!-- font awesome -->
   <script src="https://kit.fontawesome.com/c8fe6afae8.js" crossorigin="anonymous"></script>
-  <title>React App</title>
+  <title>CUISINE</title>
 </head>
 
 <body>
